--- a/index.html
+++ b/index.html
@@ -8,30 +8,33 @@ div#preload {
 
 div#inv {
     width: 150px;
-    height: 50px;
+    height: 40px;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin: -15px 0px;
     animation-name: inv2;
     animation-duration: 0.1s;
     animation-iteration-count: 1;
     animation-direction: reverse;
     animation-fill-mode: both;
-
-
+  position: fixed;
+  left: 50%;
 }
 
 div#chron {
     width: 150px;
-    height: 50px;
+    height: 40px;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin: -15px 0px -15px;
     animation-name: chron2;
     animation-duration: 0.1s;
     animation-iteration-count: 1;
     animation-direction: reverse;
     animation-fill-mode: both;
+  position: fixed;
+  left: 50%;
+  top: 35px;
 
 }
 div#inv:hover {
