--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <head>
 </head>
 <style>
+@import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
+
 div#preload {
     display:none;
 }
 
 div#inv {
-    width: 150px;
-    height: 40px;
+    width: 200px;
+    height: 50px;
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -20,8 +22,8 @@ div#inv {
 }
 
 div#chron {
-    width: 150px;
-    height: 40px;
+    width: 200px;
+    height: 50px;
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -31,6 +33,19 @@ div#chron {
     animation-direction: reverse;
     animation-fill-mode: both;
 }
+div#state {
+    width: 200px;
+    height: 50px;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    animation-name: state2;
+    animation-duration: 0.1s;
+    animation-iteration-count: 1;
+    animation-direction: reverse;
+    animation-fill-mode: both;
+}
+
 div#inv:hover {
   animation-name: inv;
   animation-duration: 0.1s;
@@ -49,101 +64,163 @@ div#chron:hover {
 
 }
 
+div#state:hover {
+  animation-name: state;
+  animation-duration: 0.1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+  animation-direction: initial;
+}
+div#state:hover .tooltiptext {
+  opacity: 1;
+  transition-duration: .3s;
+  transition-timing-function: ease-in-out;
+}
+
+div#state .tooltiptext {
+  opacity: 0;
+  background-color: black;
+  box-shadow: 0px 6px 7px #ABFF00, 0px 6px 8px black;
+  color: #ABFF00;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  width: 220px;
+  top: 90%;
+  left: 50%; 
+  margin-left: -110px;
+  font-family: 'Comfortaa', cursive;
+  font-size: 10px;
+}
 @keyframes inv {
-  0%   {background-image: url("https://c.radikal.ru/c21/1908/e5/a7d6073ea637.png");}
-  20%  {background-image: url("https://b.radikal.ru/b12/1908/a3/96906ba089ce.png");}
-  40%  {background-image: url("https://b.radikal.ru/b02/1908/85/02eca63119de.png");}
-  60%  {background-image: url("https://d.radikal.ru/d03/1908/f2/7ef46c6ade3f.png");}
-  80%  {background-image: url("https://c.radikal.ru/c43/1908/4b/07080369317b.png");}
-  100% {background-image: url("https://c.radikal.ru/c34/1908/9d/6e995483f8d1.png");}
+  100%   {background-image: url("https://d.radikal.ru/d16/1908/24/35641297417b.png");}
+  75%  {background-image: url("https://d.radikal.ru/d06/1908/8d/110bf77d885f.png");}
+  50%  {background-image: url("https://c.radikal.ru/c41/1908/79/df53eadabfad.png");}
+  25%  {background-image: url("https://b.radikal.ru/b23/1908/be/4d3237c8a913.png");}
+  0% {background-image: url("https://a.radikal.ru/a38/1908/1b/8173636dba53.png");}
 }
 
 
 @-webkit-keyframes inv {
-  0%   {background-image: url("https://c.radikal.ru/c21/1908/e5/a7d6073ea637.png");}
-  20%  {background-image: url("https://b.radikal.ru/b12/1908/a3/96906ba089ce.png");}
-  40%  {background-image: url("https://b.radikal.ru/b02/1908/85/02eca63119de.png");}
-  60%  {background-image: url("https://d.radikal.ru/d03/1908/f2/7ef46c6ade3f.png");}
-  80%  {background-image: url("https://c.radikal.ru/c43/1908/4b/07080369317b.png");}
-  100% {background-image: url("https://c.radikal.ru/c34/1908/9d/6e995483f8d1.png");}
+  100%   {background-image: url("https://d.radikal.ru/d16/1908/24/35641297417b.png");}
+  75%  {background-image: url("https://d.radikal.ru/d06/1908/8d/110bf77d885f.png");}
+  50%  {background-image: url("https://c.radikal.ru/c41/1908/79/df53eadabfad.png");}
+  25%  {background-image: url("https://b.radikal.ru/b23/1908/be/4d3237c8a913.png");}
+  0% {background-image: url("https://a.radikal.ru/a38/1908/1b/8173636dba53.png");}
 }
 
 
 @keyframes inv2 {
-  0%   {background-image: url("https://c.radikal.ru/c21/1908/e5/a7d6073ea637.png");}
-  20%  {background-image: url("https://b.radikal.ru/b12/1908/a3/96906ba089ce.png");}
-  40%  {background-image: url("https://b.radikal.ru/b02/1908/85/02eca63119de.png");}
-  60%  {background-image: url("https://d.radikal.ru/d03/1908/f2/7ef46c6ade3f.png");}
-  80%  {background-image: url("https://c.radikal.ru/c43/1908/4b/07080369317b.png");}
-  100% {background-image: url("https://c.radikal.ru/c34/1908/9d/6e995483f8d1.png");}
+  100%   {background-image: url("https://d.radikal.ru/d16/1908/24/35641297417b.png");}
+  75%  {background-image: url("https://d.radikal.ru/d06/1908/8d/110bf77d885f.png");}
+  50%  {background-image: url("https://c.radikal.ru/c41/1908/79/df53eadabfad.png");}
+  25%  {background-image: url("https://b.radikal.ru/b23/1908/be/4d3237c8a913.png");}
+  0% {background-image: url("https://a.radikal.ru/a38/1908/1b/8173636dba53.png");}
 }
 
 
 @-webkit-keyframes inv2 {
-  0%   {background-image: url("https://c.radikal.ru/c21/1908/e5/a7d6073ea637.png");}
-  20%  {background-image: url("https://b.radikal.ru/b12/1908/a3/96906ba089ce.png");}
-  40%  {background-image: url("https://b.radikal.ru/b02/1908/85/02eca63119de.png");}
-  60%  {background-image: url("https://d.radikal.ru/d03/1908/f2/7ef46c6ade3f.png");}
-  80%  {background-image: url("https://c.radikal.ru/c43/1908/4b/07080369317b.png");}
-  100% {background-image: url("https://c.radikal.ru/c34/1908/9d/6e995483f8d1.png");}
+  100%   {background-image: url("https://d.radikal.ru/d16/1908/24/35641297417b.png");}
+  75%  {background-image: url("https://d.radikal.ru/d06/1908/8d/110bf77d885f.png");}
+  50%  {background-image: url("https://c.radikal.ru/c41/1908/79/df53eadabfad.png");}
+  25%  {background-image: url("https://b.radikal.ru/b23/1908/be/4d3237c8a913.png");}
+  0% {background-image: url("https://a.radikal.ru/a38/1908/1b/8173636dba53.png");}
 }
 
 @keyframes chron {
-  0%   {background-image: url("https://d.radikal.ru/d07/1908/87/b8608a7485a9.png");}
-  20%  {background-image: url("https://c.radikal.ru/c13/1908/07/a0edb014c98f.png");}
-  40%  {background-image: url("https://c.radikal.ru/c39/1908/84/9ffb00789d34.png");}
-  60%  {background-image: url("https://c.radikal.ru/c14/1908/3b/bc89ca5bb2f6.png");}
-  80%  {background-image: url("https://d.radikal.ru/d01/1908/c1/8bf2b102cc6d.png");}
-  100% {background-image: url("https://c.radikal.ru/c21/1908/6d/b046a41ca006.png");}
+  100% {background-image: url("https://c.radikal.ru/c30/1908/00/8a8a05c2eed8.png");}
+  75% {background-image: url("https://d.radikal.ru/d08/1908/b4/10bbd9d005ce.png");}
+  50% {background-image: url("https://a.radikal.ru/a33/1908/0d/18b1f3820b3b.png");}
+  25% {background-image: url("https://c.radikal.ru/c15/1908/5e/b6b7e05f5a02.png");}
+  0% {background-image: url("https://b.radikal.ru/b15/1908/84/571f90d88fd2.png");}
 }
 
 
 @-webkit-keyframes chron {
-  0%   {background-image: url("https://d.radikal.ru/d07/1908/87/b8608a7485a9.png");}
-  20%  {background-image: url("https://c.radikal.ru/c13/1908/07/a0edb014c98f.png");}
-  40%  {background-image: url("https://c.radikal.ru/c39/1908/84/9ffb00789d34.png");}
-  60%  {background-image: url("https://c.radikal.ru/c14/1908/3b/bc89ca5bb2f6.png");}
-  80%  {background-image: url("https://d.radikal.ru/d01/1908/c1/8bf2b102cc6d.png");}
-  100% {background-image: url("https://c.radikal.ru/c21/1908/6d/b046a41ca006.png");}
+  100% {background-image: url("https://c.radikal.ru/c30/1908/00/8a8a05c2eed8.png");}
+  75% {background-image: url("https://d.radikal.ru/d08/1908/b4/10bbd9d005ce.png");}
+  50% {background-image: url("https://a.radikal.ru/a33/1908/0d/18b1f3820b3b.png");}
+  25% {background-image: url("https://c.radikal.ru/c15/1908/5e/b6b7e05f5a02.png");}
+  0% {background-image: url("https://b.radikal.ru/b15/1908/84/571f90d88fd2.png");}
 }
 
 
 @keyframes chron2 {
-  0%   {background-image: url("https://d.radikal.ru/d07/1908/87/b8608a7485a9.png");}
-  20%  {background-image: url("https://c.radikal.ru/c13/1908/07/a0edb014c98f.png");}
-  40%  {background-image: url("https://c.radikal.ru/c39/1908/84/9ffb00789d34.png");}
-  60%  {background-image: url("https://c.radikal.ru/c14/1908/3b/bc89ca5bb2f6.png");}
-  80%  {background-image: url("https://d.radikal.ru/d01/1908/c1/8bf2b102cc6d.png");}
-  100% {background-image: url("https://c.radikal.ru/c21/1908/6d/b046a41ca006.png");}
+  100% {background-image: url("https://c.radikal.ru/c30/1908/00/8a8a05c2eed8.png");}
+  75% {background-image: url("https://d.radikal.ru/d08/1908/b4/10bbd9d005ce.png");}
+  50% {background-image: url("https://a.radikal.ru/a33/1908/0d/18b1f3820b3b.png");}
+  25% {background-image: url("https://c.radikal.ru/c15/1908/5e/b6b7e05f5a02.png");}
+  0% {background-image: url("https://b.radikal.ru/b15/1908/84/571f90d88fd2.png");}
 }
 
 
 @-webkit-keyframes chron2 {
-  0%   {background-image: url("https://d.radikal.ru/d07/1908/87/b8608a7485a9.png");}
-  20%  {background-image: url("https://c.radikal.ru/c13/1908/07/a0edb014c98f.png");}
-  40%  {background-image: url("https://c.radikal.ru/c39/1908/84/9ffb00789d34.png");}
-  60%  {background-image: url("https://c.radikal.ru/c14/1908/3b/bc89ca5bb2f6.png");}
-  80%  {background-image: url("https://d.radikal.ru/d01/1908/c1/8bf2b102cc6d.png");}
-  100% {background-image: url("https://c.radikal.ru/c21/1908/6d/b046a41ca006.png");}
+  100% {background-image: url("https://c.radikal.ru/c30/1908/00/8a8a05c2eed8.png");}
+  75% {background-image: url("https://d.radikal.ru/d08/1908/b4/10bbd9d005ce.png");}
+  50% {background-image: url("https://a.radikal.ru/a33/1908/0d/18b1f3820b3b.png");}
+  25% {background-image: url("https://c.radikal.ru/c15/1908/5e/b6b7e05f5a02.png");}
+  0% {background-image: url("https://b.radikal.ru/b15/1908/84/571f90d88fd2.png");}
+}
+
+
+@keyframes state {
+  100% {background-image: url("https://a.radikal.ru/a03/1908/0d/78291016431f.png");}
+  75% {background-image: url("https://c.radikal.ru/c03/1908/57/2a511e6a5f71.png");}
+  50% {background-image: url("https://c.radikal.ru/c28/1908/2a/8f07caed1b9a.png");}
+  25% {background-image: url("https://d.radikal.ru/d00/1908/50/9e90c411f04f.png");}
+  0% {background-image: url("https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png");}
+}
+
+@-webkit-keyframes state {
+  100% {background-image: url("https://a.radikal.ru/a03/1908/0d/78291016431f.png");}
+  75% {background-image: url("https://c.radikal.ru/c03/1908/57/2a511e6a5f71.png");}
+  50% {background-image: url("https://c.radikal.ru/c28/1908/2a/8f07caed1b9a.png");}
+  25% {background-image: url("https://d.radikal.ru/d00/1908/50/9e90c411f04f.png");}
+  0% {background-image: url("https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png");}
+}
+
+
+@keyframes state2 {
+  100% {background-image: url("https://a.radikal.ru/a03/1908/0d/78291016431f.png");}
+  75% {background-image: url("https://c.radikal.ru/c03/1908/57/2a511e6a5f71.png");}
+  50% {background-image: url("https://c.radikal.ru/c28/1908/2a/8f07caed1b9a.png");}
+  25% {background-image: url("https://d.radikal.ru/d00/1908/50/9e90c411f04f.png");}
+  0% {background-image: url("https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png");}
+}
+
+
+@-webkit-keyframes state2 {
+  100% {background-image: url("https://a.radikal.ru/a03/1908/0d/78291016431f.png");}
+  75% {background-image: url("https://c.radikal.ru/c03/1908/57/2a511e6a5f71.png");}
+  50% {background-image: url("https://c.radikal.ru/c28/1908/2a/8f07caed1b9a.png");}
+  25% {background-image: url("https://d.radikal.ru/d00/1908/50/9e90c411f04f.png");}
+  0% {background-image: url("https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png");}
 }
 
 </style>
 <body>
 <div id="preload">
-<img src="https://d.radikal.ru/d07/1908/87/b8608a7485a9.png"/>
-<img src="https://c.radikal.ru/c13/1908/07/a0edb014c98f.png"/>
-<img src="https://c.radikal.ru/c39/1908/84/9ffb00789d34.png"/>
-<img src="https://c.radikal.ru/c14/1908/3b/bc89ca5bb2f6.png"/>
-<img src="https://d.radikal.ru/d01/1908/c1/8bf2b102cc6d.png"/>
-<img src="https://c.radikal.ru/c21/1908/6d/b046a41ca006.png"/>
-<img src="https://c.radikal.ru/c21/1908/e5/a7d6073ea637.png"/>
-<img src="https://b.radikal.ru/b12/1908/a3/96906ba089ce.png"/>
-<img src="https://b.radikal.ru/b02/1908/85/02eca63119de.png"/>
-<img src="https://d.radikal.ru/d03/1908/f2/7ef46c6ade3f.png"/>
-<img src="https://c.radikal.ru/c43/1908/4b/07080369317b.png"/>
-<img src="https://c.radikal.ru/c34/1908/9d/6e995483f8d1.png"/>
+<img src="https://c.radikal.ru/c30/1908/00/8a8a05c2eed8.png"/>
+<img src="https://d.radikal.ru/d08/1908/b4/10bbd9d005ce.png"/>
+<img src="https://a.radikal.ru/a33/1908/0d/18b1f3820b3b.png"/>
+<img src="https://c.radikal.ru/c15/1908/5e/b6b7e05f5a02.png"/>
+<img src="https://b.radikal.ru/b15/1908/84/571f90d88fd2.png"/>
+<img src="https://d.radikal.ru/d16/1908/24/35641297417b.png"/>
+<img src="https://d.radikal.ru/d06/1908/8d/110bf77d885f.png"/>
+<img src="https://c.radikal.ru/c41/1908/79/df53eadabfad.png"/>
+<img src="https://b.radikal.ru/b23/1908/be/4d3237c8a913.png"/>
+<img src="https://a.radikal.ru/a38/1908/1b/8173636dba53.png"/>
+<img src="https://a.radikal.ru/a03/1908/0d/78291016431f.png"/>
+<img src="https://c.radikal.ru/c03/1908/57/2a511e6a5f71.png"/>
+<img src="https://c.radikal.ru/c28/1908/2a/8f07caed1b9a.png"/>
+<img src="https://d.radikal.ru/d00/1908/50/9e90c411f04f.png"/>
+<img src="https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png"/>
+
 </div>
 <a href="http://www.amalirr.com/t1911-topic#107391" target="_blank"><div id="inv" style="position: fixed; left: 50%; transform: translateX(-50%);"></div></a>
-<a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="position: fixed; top: 35px; left: 50%; transform: translateX(-50%);"></div></a>
+<a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="position: fixed; top: 45px; left: 50%; transform: translateX(-50%);"></div></a>
+<a><div id="state" style="position: fixed; top: 81px; left: 50%; transform: translateX(-50%);"><span class="tooltiptext">Утомлён дорогой и скукой, ищет чем бы занять беспокойное сознание.</span></div></a>
 </body>
 </html>
