--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 </head>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
+html{
+    -webkit-filter: brightness(0.9) hue-rotate(90deg);
+    filter: brightness(0.9) hue-rotate(90deg);
+}
 
 div#preload {
     display:none;
