--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Comfortaa&display=swap');
 html{
-    -webkit-filter: brightness(0.9) hue-rotate(90deg);
-    filter: brightness(0.9) hue-rotate(90deg);
+    -webkit-filter: brightness(1) hue-rotate(0deg) saturate(75%);
+    filter: brightness(1) hue-rotate(0deg) saturate(75%);
 }
 
 div#preload {
