--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@ div#state:hover .tooltiptext {
   transition-duration: .3s;
   transition-timing-function: ease-in-out;
 }
+div#state:hover .tooltiptext {
+  opacity: 0;
+  transition-duration: .3s;
+  transition-timing-function: ease-in-out;
+}
 
 div#state .tooltiptext {
   opacity: 0;
