--- a/index.html
+++ b/index.html
@@ -227,7 +227,19 @@ div#state:hover {
 <a><div id="state" style="position: fixed; top: 45px; left: 50%; transform: translateX(-50%);"></div></a>
 <a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Крысиная голова раскалывается после дичайшего бодунища...</div></a>
 <script type="text/javascript"> 
-        document.getElementById("state").onclick = function() { 
+        document.getElementById("state").onmouseover = function() { 
+  var x = document.getElementById("myDIV");
+  if (document.getElementById("inv").style.opacity === "0") {
+    document.getElementById("inv").style.opacity = "1";
+    document.getElementById("chron").style.opacity = "1";
+    document.getElementById("text").style.opacity = "0";
+  } else {
+    document.getElementById("inv").style.opacity = "0";
+    document.getElementById("chron").style.opacity = "0";
+    document.getElementById("text").style.opacity = "1";
+  }
+}
+        document.getElementById("state").onmouseout = function() { 
   var x = document.getElementById("myDIV");
   if (document.getElementById("inv").style.opacity === "0") {
     document.getElementById("inv").style.opacity = "1";
