--- a/index.html
+++ b/index.html
@@ -222,10 +222,12 @@ div#state:hover {
 <img src="https://b.radikal.ru/b35/1908/fc/3355f6283aa1.png"/>
 
 </div>
-<a href="http://www.amalirr.com/t1911-topic#107391" target="_blank"><div id="inv" style="position: fixed; left: 35%; transform: translateX(-50%);"></div></a>
-<a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="position: fixed; top: 8px; left: 65%; transform: translateX(-50%);"></div></a>
+
+<div style="position: fixed; left: 50%; transform: translateX(-50%); width: 400px; z-index: 1;"><a href="http://www.amalirr.com/t1911-topic#107391" target="_blank"><div id="inv" style="float: left"></div></a>
+<a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="float: right;"></div></a></div>
 <a><div id="state" style="position: fixed; top: 45px; left: 50%; transform: translateX(-50%);"></div></a>
 <a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Крысиная голова раскалывается после дичайшего бодунища...</div></a>
+</div>
 <script type="text/javascript"> 
         document.getElementById("state").onmouseover = function() { 
   var x = document.getElementById("myDIV");
