--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <html>
 <head>
 </head>
 <style>
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Cormorant+Unicase|Kelly+Slab&display=swap');
 html{
     -webkit-filter: brightness(1.1) hue-rotate(355deg) saturate(60%);
     filter: brightness(1.1) hue-rotate(355deg) saturate(60%);
@@ -58,16 +59,16 @@ div#state {
 }
 div#text {
   opacity: 0;
-  text-shadow: 0px 1px 2px #ABFF00, 0px 2px 3px black;
+  text-shadow: 0px 1px 2px #ABFF00, 0px 2px 3px gray;
   color: black;
   text-align: center;
-  padding: 10px 0;
+  padding: 0px 0;
   border-radius: 6px;
   position: absolute;
   z-index: 0;
   width: 420px;
-  font-family: 'Amatic SC', cursive;
-  font-size: 20px;
+font-family: 'Kelly Slab', cursive;
+  font-size: 16px;
   transition-duration: .3s;
   transition-timing-function: ease-in-out;
 }
@@ -226,7 +227,7 @@ div#state:hover {
 <div style="position: fixed; left: 50%; transform: translateX(-50%); width: 400px; z-index: 1;"><a href="http://www.amalirr.com/t1911-topic#107391" target="_blank"><div id="inv" style="float: left"></div></a>
 <a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="float: right;"></div></a></div>
 <a><div id="state" style="position: fixed; top: 45px; left: 50%; transform: translateX(-50%);"></div></a>
-<a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Крысиная голова раскалывается после дичайшего бодунища...</div></a>
+<a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Крысиная голова раскалывается после дичайшего бодунища... Но Рик ни о чём не жалеет!</div></a>
 </div>
 <script type="text/javascript"> 
         document.getElementById("state").onmouseover = function() { 
