--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ div#state:hover {
 <div style="position: fixed; left: 50%; transform: translateX(-50%); width: 400px; z-index: 1;"><a href="http://www.amalirr.com/t1911-topic#107391" target="_blank"><div id="inv" style="float: left"></div></a>
 <a href="http://www.amalirr.com/t1912-topic#107392" target="_blank"><div id="chron" style="float: right;"></div></a></div>
 <a><div id="state" style="position: fixed; top: 45px; left: 50%; transform: translateX(-50%);"></div></a>
-<a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Крысиная голова раскалывается после дичайшего бодунища... Но Рик ни о чём не жалеет!</div></a>
+<a><div id="text" style="position: fixed; top: 8px; left: 50%; transform: translateX(-50%);">Тело ноет, мышцы сводит от усталости, зато похмелье уже прошло...</div></a>
 </div>
 <script type="text/javascript"> 
         document.getElementById("state").onmouseover = function() { 
