--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+html {
+  -webkit-filter: hue-rotate(290deg); /* Safari 6.0 - 9.0 */
+  filter: hue-rotate(290deg);
+}
 div#preload {
     display:none;
 }
