--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ a#link:hover {
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
 
-<a>Устала и не перестаёт офигевать от произошедших событий.</a>
+<a>Успела неплохо отдохнуть и набраться сил.</a>
 
 
 </div><div style="position: relative; text-align: center;"><img src="https://a.radikal.ru/a14/1909/26/a3fe7275efb6.png" style="height: 30"></div></body></html>
