--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ a#link:hover {
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
 
-<a>Две души в одном теле — это неприятно. Клейтон снова вернул себе контроль, но надолго ли...</a>
+<a>Всё было бы хорошо, но халявщик в лице Клейтона напрягает эльфийку.</a>
 
 
 </div><div style="position: relative; text-align: center;"><img src="https://a.radikal.ru/a14/1909/26/a3fe7275efb6.png" style="height: 30"></div></body></html>
