--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@ a#link:hover {
     
 }
 </style>
-<body><div id="preload"><img src="https://c.radikal.ru/c30/1909/29/f602721e67af.png"><img src="https://d.radikal.ru/d14/1909/8f/7118807b560b.png"><img src="https://a.radikal.ru/a14/1909/26/a3fe7275efb6.png"></div><div style="position: relative; text-align: center; margin: -4px"><img src="https://c.radikal.ru/c30/1909/29/f602721e67af.png" style="height: 30"></div>
+<body><div id="preload"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png"></div>
+<div style="position: relative; text-align: center; margin: -4px"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png" style="height: 30"></div>
 <div id="Links" style="text-align: center; word-spacing: 8px;"><a id="link" target="_blank" href="http://www.amalirr.com/t949-topic#40107">Чары</a> <a id="link" target="_blank" href="http://www.amalirr.com/t1208-topic#62820">Хроника</a> <a id="link" target="_blank" href="http://www.amalirr.com/t948-topic#40106">Вещи</a></div>
-<div style="position: relative; text-align: center;"><img src="https://d.radikal.ru/d14/1909/8f/7118807b560b.png" style="height: 30"></div>
+<div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png" style="height: 30"></div>
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
 
 <a>Всё было бы хорошо, но халявщик в лице Клейтона напрягает эльфийку.</a>
 
 
-</div><div style="position: relative; text-align: center;"><img src="https://a.radikal.ru/a14/1909/26/a3fe7275efb6.png" style="height: 30"></div></body></html>
+</div><div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png" style="height: 30"></div></body></html>
