--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a#link:hover {
 </style>
 <body><div id="preload"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png"></div>
 <div style="position: relative; text-align: center; margin: -4px"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png" style="height: 30"></div>
-<div id="Links" style="text-align: center; word-spacing: 8px;"><a id="link" target="_blank" href="http://www.amalirr.com/t949-topic#40107">Чары</a> <a id="link" target="_blank" href="http://www.amalirr.com/t1208-topic#62820">Хроника</a> <a id="link" target="_blank" href="http://www.amalirr.com/t948-topic#40106">Вещи</a></div>
+<div id="Links" style="text-align: center; word-spacing: 8px;"><a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11453-kniga-zaklinanii-ianiki/">Чары</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11454-dnevnik-charodeiki/">Хроника</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11455-inventar-ianiki/">Вещи</a></div>
 <div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png" style="height: 30"></div>
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
