--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 html {
-  -webkit-filter: hue-rotate(0deg); /* Safari 6.0 - 9.0 */
-  filter: hue-rotate(0deg);
+  -webkit-filter: hue-rotate(200deg); /* Safari 6.0 - 9.0 */
+  filter: hue-rotate(200deg);
 }
 div#preload {
     display:none;
@@ -34,12 +34,12 @@ a#link:hover {
 </style>
 <body><div id="preload"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png"></div>
 <div style="position: relative; text-align: center; margin: -4px"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/1.png" style="height: 30"></div>
-<div id="Links" style="text-align: center; word-spacing: 8px;"><a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11453-kniga-zaklinanii-ianiki/">Чары</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11454-dnevnik-charodeiki/">Хроника</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11455-inventar-ianiki/">Вещи</a></div>
+<div id="Links" style="text-align: center; word-spacing: 8px;"><a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11453-kniga-zaklinanii-kleitona/#entry212344">Чары</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11454-dnevnik-charodeia/#entry212347">Хроника</a> <a id="link" target="_blank" href="http://www.amalirr.ru/index.php?/topic/11455-inventar-kleitona/#entry212348">Вещи</a></div>
 <div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/2.png" style="height: 30"></div>
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
 
-<a>Всё было бы хорошо, но халявщик в лице Клейтона напрягает эльфийку.</a>
+<a>Клейтон наконец сам по себе, но пока приходит в чувства.</a>
 
 
 </div><div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png" style="height: 30"></div></body></html>
