--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 html {
-  -webkit-filter: hue-rotate(200deg); /* Safari 6.0 - 9.0 */
-  filter: hue-rotate(200deg);
+  -webkit-filter: hue-rotate(280deg) saturate(1.2) brightness(1) contrast(1);
+  filter: hue-rotate(280deg) saturate(1.2) brightness(1) contrast(1);
 }
 div#preload {
     display:none;
@@ -27,7 +27,7 @@ a#link {
 }
 a#link:hover {
     color: rgba(210,255,255,1);
-    text-shadow: 1px 1px 2px rgba(0,100,190,1), 0px 0px 2px rgba(0,100,190,1), -1px -1px 2px rgba(100,100,190,1), 1px -1px 2px rgba(0,100,190,1), -1px 1px 2px rgba(0,100,190,1);
+    text-shadow: 1px 1px 2px rgba(0,100,190,1), 0px 0px 2px rgba(0,100,240,1), -1px -1px 2px rgba(100,100,190,1), 1px -1px 2px rgba(100,100,190,1), -1px 1px 2px rgba(0,100,190,1);
 
     
 }
@@ -39,7 +39,7 @@ a#link:hover {
 </div><div style="position: relative; margin-top: -17px; left: 50%; transform: translateX(-50%); width: 167px; text-align: center;">
 
 
-<a>Клейтон наконец сам по себе, но пока приходит в чувства.</a>
+<a>3060 год, Раай перестроил свой организм почти полностью превратившись в иллитири внешне. О том, что он на самом деле анарид, знает лишь Даурлон.</a>
 
 
 </div><div style="position: relative; text-align: center;"><img src="https://raw.githubusercontent.com/miximasm/sign_rick/master/3.png" style="height: 30"></div></body></html>
